Clase 27 - Comprobar si el token es correcto

--- a/symfony/app/config/services.yml
+++ b/symfony/app/config/services.yml
@@ -7,11 +7,14 @@ services:
 #    service_name:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
-    app.helpers:
-        class: AppBundle\Services\Helpers
-        arguments: ["null"]
-        
+
     app.jwt_auth:
         class: AppBundle\Services\JwtAuth
         arguments: ["@doctrine.orm.entity_manager"]
+
+    app.helpers:
+        class: AppBundle\Services\Helpers
+        arguments: ["@app.jwt_auth"]
+        
+    
         
