--- a/symfony/src/AppBundle/Resources/config/routing/default.yml
+++ b/symfony/src/AppBundle/Resources/config/routing/default.yml
@@ -11,5 +11,5 @@ default_login:
 default_pruebas:
     path:    /pruebas
     defaults: { _controller: "AppBundle:Default:pruebas"}
-    methods:  GET
+    methods:  POST
     
