Clase 31 Editar usuarios

--- a/symfony/src/AppBundle/Resources/config/routing/user.yml
+++ b/symfony/src/AppBundle/Resources/config/routing/user.yml
@@ -3,3 +3,8 @@ user_new:
     defaults: { _controller: "AppBundle:User:new"}
     methods:  POST
     
+user_edit:
+    path:    /edit
+    defaults: { _controller: "AppBundle:User:edit"}
+    methods:  POST
+    
