Clase 32 Subir imagen

--- a/symfony/src/AppBundle/Resources/config/routing/user.yml
+++ b/symfony/src/AppBundle/Resources/config/routing/user.yml
@@ -1,10 +1,15 @@
 user_new:
-    path:    /new
-    defaults: { _controller: "AppBundle:User:new"}
-    methods:  POST
+    path:       /new
+    defaults:   { _controller: "AppBundle:User:new"}
+    methods:    POST
     
 user_edit:
-    path:    /edit
-    defaults: { _controller: "AppBundle:User:edit"}
-    methods:  POST
+    path:       /edit
+    defaults:   { _controller: "AppBundle:User:edit"}
+    methods:    POST
+    
+user_upload_image:
+    path:       /upload-image-user
+    defaults:   { _controller: "AppBundle:User:uploadImage"}
+    methods:    POST
     
