Clase 33 y 34 Crear nuevos videos

--- a/symfony/src/AppBundle/Resources/config/routing.yml
+++ b/symfony/src/AppBundle/Resources/config/routing.yml
@@ -6,3 +6,7 @@ app_user:
     resource: "@AppBundle/Resources/config/routing/user.yml"
     prefix: /user
     
+app_video:
+    resource: "@AppBundle/Resources/config/routing/video.yml"
+    prefix: /video
+    
