--- a/symfony/app/config/config.yml
+++ b/symfony/app/config/config.yml
@@ -67,3 +67,16 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+# KnpPaginatorBundle Configuration
+knp_paginator:
+    page_range: 5
+    defaults_options:
+        page_name:  page
+        sort_field_name:  sort
+        sort_direction_name:  direction
+        distinct:  true
+    template:
+        pagination:  KnpPaginatorBundle:Pagination:twitter_bootstrap_v3_pagination.html.twig
+        sortable:  KnpPaginatorBundle:Pagination:sortable_link.html.twig
+        
