--- a/symfony/src/AppBundle/Resources/config/routing/video.yml
+++ b/symfony/src/AppBundle/Resources/config/routing/video.yml
@@ -22,3 +22,8 @@ video_list:
     path:       /list
     defaults:   { _controller: "AppBundle:Video:videos"}
     methods:    GET
+    
+video_lasts_videos:
+    path:       /lasts-videos
+    defaults:   { _controller: "AppBundle:Video:lastsVideos"}
+    methods:    GET
