--- a/symfony/src/AppBundle/Resources/config/routing/video.yml
+++ b/symfony/src/AppBundle/Resources/config/routing/video.yml
@@ -27,3 +27,8 @@ video_lasts_videos:
     path:       /lasts-videos
     defaults:   { _controller: "AppBundle:Video:lastsVideos"}
     methods:    GET
+    
+video_detail:
+    path:       /detail/{id}
+    defaults:   { _controller: "AppBundle:Video:video"}
+    methods:    POST
