Clase 43 Canal de videos de usuario

--- a/symfony/src/AppBundle/Resources/config/routing/user.yml
+++ b/symfony/src/AppBundle/Resources/config/routing/user.yml
@@ -1,15 +1,25 @@
 user_new:
-    path:       /new
-    defaults:   { _controller: "AppBundle:User:new"}
-    methods:    POST
+    path:  /new
+    defaults:  { _controller: "AppBundle:User:new"}
+    methods:  POST
     
 user_edit:
-    path:       /edit
-    defaults:   { _controller: "AppBundle:User:edit"}
-    methods:    POST
+    path:  /edit
+    defaults:  { _controller: "AppBundle:User:edit"}
+    methods:  POST
     
 user_upload_image:
-    path:       /upload-image-user
-    defaults:   { _controller: "AppBundle:User:uploadImage"}
-    methods:    POST
+    path:  /upload-image-user
+    defaults:  { _controller: "AppBundle:User:uploadImage"}
+    methods:  POST
+    
+user_channel:
+    path:  /channel/{user_id}
+    defaults:  { _controller: "AppBundle:User:channel", user_id:null}
+    methods:  GET
+    
+user_test:
+    path:  /test
+    defaults:  { _controller: "AppBundle:User:test"}
+    methods:  GET
     
