Clase 44 y 45 Crear controlador de comentarios y añadir comentarios a un video

--- a/symfony/src/AppBundle/Resources/config/routing.yml
+++ b/symfony/src/AppBundle/Resources/config/routing.yml
@@ -10,3 +10,6 @@ app_video:
     resource: "@AppBundle/Resources/config/routing/video.yml"
     prefix: /video
     
+app_comment:
+    resource: "@AppBundle/Resources/config/routing/comment.yml"
+    prefix: /comment
